syntax = "proto3";
package ingress.solo.io;
option go_package = "github.com/solo-io/gloo/projects/ingress/pkg/api/v1";

import "google/protobuf/any.proto";

import "github.com/solo-io/solo-kit/api/v1/metadata.proto";
import "github.com/solo-io/solo-kit/api/v1/solo-kit.proto";

import "extproto/ext.proto";
option (extproto.hash_all) = true;
option (extproto.clone_all) = true;
option (extproto.equal_all) = true;
/*
A simple wrapper for a Kubernetes Service Object.
*/
message KubeService{

    option (core.solo.io.resource).short_name = "sv";
    option (core.solo.io.resource).plural_name = "services";
    // a raw byte representation of the kubernetes service this resource wraps
    google.protobuf.Any kube_service_spec = 1;
    // a raw byte representation of the service status of the kubernetes service object
    google.protobuf.Any kube_service_status = 2;

    // Metadata contains the object metadata for this resource
    core.solo.io.Metadata metadata = 7;
}
